--- a/src/sass/partials/_team-members.scss
+++ b/src/sass/partials/_team-members.scss
@@ -103,7 +103,7 @@
       > div {
         margin-bottom: 10px;
         @media (min-width: $desktop-start) {
-          margin-bottom: 30px;
+          margin-bottom: 20px;
         }
       }
       img {
